# modelcrew-desktop

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: actionlint.yaml
.github/workflows/: ci.yml  nightly.yml  release-build-arch.yml  release-build-linux.yml  release-build-macos.yml  release-build-windows.yml  release-finalize.yml  release-prepare.yml  release-publish-aur.yml  release.yml
packaging/: README.md
packaging/aur/: PKGBUILD.template  aur.archlinux.org_known_hosts
release-notes/: 0.0.1.json  0.0.2.json  0.0.3.json  0.0.4.json  0.0.5.json  0.0.6.json  0.0.7.json  0.0.8.json
scripts/: gen-icons.sh  release-assets.test.mjs  release-utils.mjs  release-utils.test.mjs  set-version.mjs  set-version.test.mjs  validate-changelog.mjs  validate-release-notes.mjs
scripts/ci/: build-arch-package.sh  bundle-gstreamer-appimage.sh  check-appimage-audio.sh  check-appimage.sh
scripts/release/: build-info.mjs  checksums.mjs  generate-latest.mjs  lib.mjs  prepare-assets.mjs  prepare-aur.mjs  release-body.mjs  validate-release.mjs  verify-release.mjs  verify-remote-assets.mjs  verify-signatures.mjs
src/: App.css  App.tsx  agents.test.ts  agents.ts  animations.ts  appActions.ts  constants.ts  i18n.ts  layoutOps.test.ts  layoutOps.ts  main.tsx  notifications.ts  persist.ts  shell.ts  sound.test.ts  sound.ts  theme.ts  useDockviewSetup.ts  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_sessions.rs  command_error.rs  git_changes.rs  github_auth.rs  lib.rs  linux_updater.rs  main.rs  pty.rs  terminal_snapshots.rs  update_cache.rs  win_proc.rs  workspace_roots.rs
src/git/: commitGraph.test.ts  commitGraph.ts  gitChanges.test.ts  gitChanges.ts  githubAvatars.ts  graphGeometry.test.ts  graphGeometry.ts
src/github/: auth.ts  authState.ts
src/hotkeys/: useCmdDrag.tsx  useHotkeys.tsx
src/i18n/: en.ts  index.ts  ru.ts
src/panels/: GitChangesPanel.test.tsx  GitChangesPanel.tsx  GroupActions.tsx  PlaceholderPanel.tsx  TerminalPanel.tsx  TerminalTab.tsx  Welcome.tsx
src/persist/: index.ts  model.ts  normalize.ts
src/styles/: base.css  git-changes.css  github-auth.css  index.css  notification-bell.css  notifications.css  overlays.css  settings.css  sidebar.css  terminal.css  titlebar.css  update-cards.css  update-popover.css
src/terminal/: agentAlertIntegration.test.ts  agentAlerts.test.ts  agentAlerts.ts  preferences.ts  registry.ts  snapshots.ts
src/test/: setup.ts
src/ui/: ConfirmDialog.tsx  GithubAuth.tsx  Icons.tsx  Settings.test.tsx  Settings.tsx  Sidebar.tsx  Titlebar.test.tsx  Titlebar.tsx  useAnimatedPresence.ts
src/updater/: UpdatePopover.test.tsx  UpdatePopover.tsx  installTarget.ts  notifications.ts  readNotifications.test.ts  (+7 more)
(+12 files in other folders)
