[package]
name = "modelcrew-desktop"
version = "0.0.6"
description = "ModelCrew terminal manager"
authors = ["Denis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modelcrew_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
semver = "1"
sha2 = "0.10"
base64 = "0.22"
minisign-verify = "0.2"
tempfile = "3"
tauri-plugin-notification = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
notify = "8"
# rustls-стек уже тянет tauri-plugin-updater, но без криптопровайдера
# (rustls-no-provider) — при сборке Client это паникует. Фича `rustls`
# включает провайдер aws-lc-rs, и reqwest берёт его явно.
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "form",
  "rustls",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Threading",
] }
